Adicionar suporte a tema de alto contraste: implementar estilos e lógica para alternar entre temas normal e de contraste, melhorando a acessibilidade. A funcionalidade em si está ok, porém ainda preciso completar o contrast.css para atualizar a página toda. No momento desativei a feature de animação do "x" que fecha os modais, por que a animação de rodas estava alterando o tamanho dos modais e bugando o dialog do modal. Pretendo retornar com ela depois, para focar um pouco mais nesse bug e em outros detalhes de animação.

--- a/style.css
+++ b/style.css
@@ -415,7 +415,6 @@ main {
 
 .fechar-modal:hover {
     color: #333;
-    transform: rotate(90deg);
 }
 
 /* titulo e barra de progresso dos jogos */
